--- a/deep-learning-with-pytorch-step-by-step/Part-III-NLP/02_attention.ipynb
+++ b/deep-learning-with-pytorch-step-by-step/Part-III-NLP/02_attention.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMz8fFSnQ8vdJP096bPm3B2",
+      "authorship_tag": "ABX9TyPpqRjgE0074mAYSsZIDMHE",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -91,7 +91,7 @@
       ],
       "metadata": {
         "id": "wlXOl_Holz6M",
-        "outputId": "628a9c77-44f0-4ff2-ec4e-73c3a45935fa",
+        "outputId": "6b2ade69-f40c-45f9-cdfd-ad7027fbc370",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -167,7 +167,7 @@
       ],
       "metadata": {
         "id": "tfnZyAI5nVL0",
-        "outputId": "19148b2e-eee5-4df2-cf54-3e0724737362",
+        "outputId": "b3b8d5d0-a73c-452d-b335-b3d07b087f9c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 295
@@ -205,7 +205,7 @@
       ],
       "metadata": {
         "id": "ND78M8VHnj7w",
-        "outputId": "f22bf9ab-bd32-48f7-9ecb-889c3149ac6d",
+        "outputId": "58c12d8b-df3d-4394-9486-e0941f3066d3",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 295
@@ -275,7 +275,7 @@
       ],
       "metadata": {
         "id": "uLYCNOICACwv",
-        "outputId": "7236879f-87bf-43a0-9f64-570145b73b26",
+        "outputId": "cb91ef5c-0bfd-4db2-d0f0-c4fb05232169",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 178
@@ -385,7 +385,7 @@
       ],
       "metadata": {
         "id": "0TL0qt6iG4j2",
-        "outputId": "ce076065-d8f7-410f-b800-bd3fe3e3aeb0",
+        "outputId": "f2ebb1c5-9f48-4127-90c6-b788f195b465",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -443,7 +443,7 @@
       ],
       "metadata": {
         "id": "-2xSmTDYHlTL",
-        "outputId": "3e9a3cfa-2f70-4d1c-8d0c-fd4595b3c9b9",
+        "outputId": "230d8442-b8bd-4a96-f3b7-7df70e0c4e62",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -617,7 +617,7 @@
       ],
       "metadata": {
         "id": "fgMpzO1_Cdx1",
-        "outputId": "47cb3f39-e893-4f54-8149-b5b126aee36a",
+        "outputId": "e921f3c6-af14-44f0-fa7b-f900992401b6",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -695,7 +695,7 @@
       ],
       "metadata": {
         "id": "v8JKnoukC_Eo",
-        "outputId": "a5e8ce7c-1a54-4333-a75b-0ae171ff9d81",
+        "outputId": "ce97742b-fc37-4799-d0f0-005b5ba75304",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -768,7 +768,7 @@
       ],
       "metadata": {
         "id": "U7THbRPfR4tO",
-        "outputId": "1bb91a09-cc01-4390-bf63-cd616f894d55",
+        "outputId": "ab8a8e9e-182f-4459-d6d4-bb439ba5b88a",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -928,7 +928,7 @@
       ],
       "metadata": {
         "id": "zfYuoj0oMnRG",
-        "outputId": "61ff4b86-3acd-475f-b3dc-8ad51c639721",
+        "outputId": "0b6e9244-25ad-4269-a103-4aabcca73e22",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -965,7 +965,7 @@
       ],
       "metadata": {
         "id": "_ooNCvYAM38u",
-        "outputId": "d527229f-93cd-4eeb-82e9-f874710331da",
+        "outputId": "0ae8e8d8-8990-491c-8b11-9c759ab98907",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1015,7 +1015,7 @@
       ],
       "metadata": {
         "id": "uMJ1tByQ6Wff",
-        "outputId": "ea5f83eb-3337-4e48-c861-55316d5b8f18",
+        "outputId": "97f1da77-0686-4b4a-b052-8c7b9827fdad",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1130,7 +1130,7 @@
       ],
       "metadata": {
         "id": "P2NfuqRcITgD",
-        "outputId": "d200b22d-0aeb-40b4-e458-203254d4e302",
+        "outputId": "b0a9ef28-b9ac-4365-fbd2-f5a0578eea99",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 349
@@ -1166,7 +1166,7 @@
       ],
       "metadata": {
         "id": "ITjKDaEHKhkv",
-        "outputId": "8c42c600-c1a8-49d2-f285-edf8a540b1d8",
+        "outputId": "9c9e77f8-8459-4975-9ad6-2d070c794d86",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 354
@@ -1239,7 +1239,7 @@
       ],
       "metadata": {
         "id": "E18489UJVkUp",
-        "outputId": "0db8a59e-3ea9-43cc-cbc2-7a6630002590",
+        "outputId": "2c7894c6-aca4-49f6-e06f-19b5f0647b1a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 484
@@ -1407,7 +1407,7 @@
       ],
       "metadata": {
         "id": "JAfprdWuwNol",
-        "outputId": "0e0a6006-5886-4446-c9dd-48d739277561",
+        "outputId": "5c9df2ad-7bcf-4da1-a21e-b11bcb37885d",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1435,7 +1435,7 @@
       ],
       "metadata": {
         "id": "RuQh_OXtxb53",
-        "outputId": "05b16bd1-3f2e-43c7-f693-672e074539e8",
+        "outputId": "82a735db-6adf-44b1-fc1f-5518f11f2a1b",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1503,7 +1503,7 @@
       ],
       "metadata": {
         "id": "-BK_YiuC01gv",
-        "outputId": "5401879b-5d27-4b18-b675-19221a953884",
+        "outputId": "3528ec5f-5fe5-4dae-e8ff-e876ea445eec",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1553,7 +1553,7 @@
       ],
       "metadata": {
         "id": "zxUDj3XK3UZt",
-        "outputId": "b7b9acfb-6ffb-4c79-9b10-4bf9bdc6ffdb",
+        "outputId": "c0e1b919-4d7f-4a64-a1a2-edc5c7f08e76",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1600,7 +1600,7 @@
       ],
       "metadata": {
         "id": "IGcGvYj9p_dc",
-        "outputId": "012e2c88-256a-4438-e1c3-5fdad01d1857",
+        "outputId": "356f0c2b-e21d-43ff-890c-7293b0810aeb",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1638,7 +1638,7 @@
       ],
       "metadata": {
         "id": "f5MfJKTPqkFQ",
-        "outputId": "5dcff06e-88fc-4ed9-caee-4c590646d27c",
+        "outputId": "a17ed69a-9448-4275-cbd4-b4af6275de6c",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1744,7 +1744,7 @@
       ],
       "metadata": {
         "id": "hHXaJk54IjwX",
-        "outputId": "49f9b395-1381-4bf9-9381-0017c2115584",
+        "outputId": "6403e6a2-3f9b-4c1e-b758-d6452306fe15",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1802,7 +1802,7 @@
       ],
       "metadata": {
         "id": "CT6Lx1CnJBhD",
-        "outputId": "5dbb2cee-5ec2-4e65-dc57-04a335184668",
+        "outputId": "551221ed-674c-4796-f494-f2b08f0ddfa5",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1885,7 +1885,7 @@
       ],
       "metadata": {
         "id": "nBr5j_4sEw9i",
-        "outputId": "c6a33df8-f456-4190-b8c3-dba94ec7eeac",
+        "outputId": "e4a5423b-e11e-465f-b65f-ad799a152286",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1924,7 +1924,7 @@
       ],
       "metadata": {
         "id": "AvAm04wjFONs",
-        "outputId": "076ca45e-5903-4dcd-b081-76cf8b2cbaab",
+        "outputId": "0be2e7e4-72ff-46fe-d121-b112c699897d",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1963,7 +1963,7 @@
       ],
       "metadata": {
         "id": "8iGiqblFF2Ra",
-        "outputId": "3747e96b-129b-4081-f47b-13e610dc5999",
+        "outputId": "01e2d156-3409-4c70-d10a-4c9cb8a0d2e3",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -2157,7 +2157,7 @@
       ],
       "metadata": {
         "id": "Nog_qUB8a_cj",
-        "outputId": "3812368f-5e22-424f-eb58-e82a69d4c4f9",
+        "outputId": "f75c5135-50f3-4491-e857-8529e89a5346",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -2199,7 +2199,7 @@
       ],
       "metadata": {
         "id": "VncFC3PEbXGe",
-        "outputId": "08fc3159-414c-49e8-8089-9e78ddfa5c49",
+        "outputId": "8f885adc-150b-407a-8e2d-57bc745cd6ec",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -2324,7 +2324,7 @@
       ],
       "metadata": {
         "id": "Jq-O2l6CghKA",
-        "outputId": "b47af230-d8d7-4f2e-8766-7493a220a247",
+        "outputId": "0f65cbb6-fadf-44e6-c287-623ba1d3f8a4",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -2385,7 +2385,7 @@
       ],
       "metadata": {
         "id": "aJUeVzeTsDKe",
-        "outputId": "69a2da5d-8cf2-4758-a1e8-b77123e2153e",
+        "outputId": "881c84db-eabc-4538-dd61-7d70ad074128",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -2507,7 +2507,7 @@
       ],
       "metadata": {
         "id": "AKfSwjms3ZPr",
-        "outputId": "17f5df29-115e-4105-e33d-719894186330",
+        "outputId": "f36c5dda-a4a7-4d05-f6e5-2016f588cb8a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 349
@@ -2562,7 +2562,7 @@
       ],
       "metadata": {
         "id": "lfPLCOS_3tXZ",
-        "outputId": "237714c2-6b22-45db-f11a-bbe8604d94c8",
+        "outputId": "537e5d89-6cc0-4a9e-89d1-9ae064d7078a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 354
@@ -2622,12 +2622,12 @@
       ],
       "metadata": {
         "id": "F49xcXh24FDO",
-        "outputId": "4be8ad62-44bf-4a7c-b125-f1216b620185",
+        "outputId": "bbd89321-0d20-4927-93f6-99ffa66ea136",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 58,
+      "execution_count": 57,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2638,7 +2638,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 58
+          "execution_count": 57
         }
       ]
     },
@@ -2690,13 +2690,13 @@
       ],
       "metadata": {
         "id": "ras6jR3V52x-",
-        "outputId": "fd1e3ce1-19dc-432b-de98-ac7e779d75d8",
+        "outputId": "10bacb56-6cc4-445b-aeab-32450e99c94f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 365
         }
       },
-      "execution_count": 59,
+      "execution_count": 58,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2736,9 +2736,87 @@
     },
     {
       "cell_type": "markdown",
-      "source": [],
+      "source": [
+        "There is no reason to stick with only one attention mechanism: We can use several\n",
+        "attention mechanisms at once, each referred to as an attention head.\n",
+        "\n",
+        "Each attention head will output its own context vector, and they will all get\n",
+        "concatenated together and combined using a linear layer. In the end, the multiheaded\n",
+        "attention mechanism will still output a single context vector.\n",
+        "\n",
+        "![](https://github.com/rahiakela/deep-learning-research-and-practice/blob/main/deep-learning-with-pytorch-step-by-step/Part-III-NLP/images/multiattn.png?raw=1)\n",
+        "\n",
+        "The very same hidden states from both encoder (\"keys\" and \"values\") and decoder\n",
+        "(\"query\") will feed all attention heads.\n",
+        "\n",
+        "At first, you may think that the attention heads will end up being redundant (and this may indeed be the case at times), but,\n",
+        "thanks to the affine transformations of both \"keys\" ($K$) and \"queries\" ($Q$), and \"values\" ($V$) too, it is more likely that each attention head will learn a distinct pattern.\n",
+        "\n",
+        "The multi-headed attention mechanism is commonly used together with selfattention and, as you’ll shortly see, the hidden states will be\n",
+        "replaced by the raw data points. For that reason, we throw yet another\n",
+        "transformation into the mix to give the model a chance to transform the data points (which has been the role played by the recurrent layer so far).\n",
+        "\n",
+        "The multi-headed attention mechanism is usually depicted like this:\n",
+        "\n",
+        "![](https://github.com/rahiakela/deep-learning-research-and-practice/blob/main/deep-learning-with-pytorch-step-by-step/Part-III-NLP/images/aiayn_multihead.png?raw=1)"
+      ],
       "metadata": {
         "id": "kFt0-5RD646N"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class MultiHeadAttention(nn.Module):\n",
+        "\n",
+        "  def __init__(self, n_heads, d_model, input_dim=None, proj_values=True):\n",
+        "    super().__init__()\n",
+        "\n",
+        "    self.linear = nn.Linear(n_heads * d_model, d_model)\n",
+        "    self.attention_head = nn.ModuleList([Attention(d_model, input_dim=input_dim, proj_values=proj_values) for _ in range(n_heads)])\n",
+        "\n",
+        "  def init_keys(self, key):\n",
+        "    for attention in self.attention_head:\n",
+        "      attention.init_keys(key)\n",
+        "\n",
+        "  @property\n",
+        "  def alphas(self):\n",
+        "    # Shape: n_heads, N, 1, L (source)\n",
+        "    return torch.stack([attention.alphas for attention in self.attention_head], dim=0)\n",
+        "\n",
+        "  def output_function(self, contexts):\n",
+        "    # N, 1, n_heads * D\n",
+        "    concatenated = torch.cat(contexts, axis=-1)\n",
+        "    # Linear transformation to go back to original dimension\n",
+        "    output = self.linear(concatenated)  # N, 1, D\n",
+        "    return output\n",
+        "\n",
+        "  def forward(self, query, mask=None):\n",
+        "    contexts = [attention(query, mask=mask) for attention in self.attention_head]\n",
+        "    output = self.output_function(contexts)\n",
+        "    return output"
+      ],
+      "metadata": {
+        "id": "--1X_WGPCYT2"
+      },
+      "execution_count": 59,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "It is pretty much a list of attention mechanisms with an extra linear layer on top.\n",
+        "\n",
+        "Even though PyTorch recursively looks for models (and layers) listed as attributes\n",
+        "to get a comprehensive list of all parameters, it does not look for models inside\n",
+        "Python lists.\n",
+        "\n",
+        "Therefore, the only way to have a list of models (or layers) is to use\n",
+        "the appropriate `nn.ModuleList`, which you can still index and loop over just like\n",
+        "with any other regular list."
+      ],
+      "metadata": {
+        "id": "cQpEZzb6Ge5U"
       }
     }
   ]
