--- a/deep-learning-with-pytorch-step-by-step/Part-III-NLP/03_self_attention.ipynb
+++ b/deep-learning-with-pytorch-step-by-step/Part-III-NLP/03_self_attention.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPAZcbZNoMlcbALGR/KwqfC",
+      "authorship_tag": "ABX9TyP2d6+OtAWmVFL+MvbvxDUm",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -333,7 +333,7 @@
         "We can dive deeper into the inner workings of the self-attention\n",
         "mechanism.\n",
         "\n",
-        "![](images/encoder_self.png?raw=1)\n",
+        "![](https://github.com/rahiakela/deep-learning-research-and-practice/blob/main/deep-learning-with-pytorch-step-by-step/Part-III-NLP/images/encoder_self.png?raw=1)\n",
         "\n",
         "Let’s focus on the self-attention mechanism on the left, used to generate the\n",
         "\"hidden state\" ($h_{00}, h_{01}$) corresponding to the first data point in the source sequence ($x_{00}, x_{01}$), and see how it works in great detail:\n",
@@ -361,11 +361,7 @@
         "\\color{blue}{\\text{context vector}_1}\\color{black}= \\alpha_{\\color{blue}{1}\\color{red}0}V_0 + \\alpha_{{\\color{blue}{1}\\color{red}1}}V_1\n",
         "$$\n",
         "\n",
-        ">As you probably already noticed, the context vector (and thus\n",
-        "the \"hidden state\") associated with a data point is basically a\n",
-        "function of the corresponding \"query\" ($Q$), and everything else\n",
-        "(\"keys\" ($K$), \"values\" ($V$), and the parameters of the self-attention\n",
-        "mechanism) is held constant for all queries.\n",
+        ">As you probably already noticed, the context vector (and thus the \"hidden state\") associated with a data point is basically a function of the corresponding \"query\" ($Q$), and everything else (\"keys\" ($K$), \"values\" ($V$), and the parameters of the self-attention mechanism) is held constant for all queries.\n",
         "\n",
         "Therefore, we can simplify a bit our previous diagram and depict only one self-attention mechanism, assuming it will be fed a different \"query\" ($Q$) every time.\n",
         "\n",
@@ -387,14 +383,11 @@
         "\n",
         "For the encoder, the shape of the alphas attribute is given by ($N, L_{source}, L_{source}$) since it is looking at itself.\n",
         "\n",
-        ">Even though I’ve described the process as if it were sequential,\n",
-        "these operations can be parallelized to generate all \"hidden\n",
-        "states\" at once, which is much more efficient than using a\n",
-        "recurrent layer that is sequential in nature.\n",
+        ">Even though I’ve described the process as if it were sequential, these operations can be parallelized to generate all \"hidden states\" at once, which is much more efficient than using a recurrent layer that is sequential in nature.\n",
         "\n",
         "We can also use an even more simplified diagram of the encoder that abstracts the nitty-gritty details of the self-attention mechanism.\n",
         "\n",
-        "![](images/transf_encself.png?raw=1)\n",
+        "![](https://github.com/rahiakela/deep-learning-research-and-practice/blob/main/deep-learning-with-pytorch-step-by-step/Part-III-NLP/images/transf_encself.png?raw=1)\n",
         "\n",
         "The code for our encoder with self-attention is actually quite simple since most of the moving parts are inside the attention heads:"
       ],
