--- a/deep-learning-with-pytorch-step-by-step/Part-III-NLP/03_self_attention.ipynb
+++ b/deep-learning-with-pytorch-step-by-step/Part-III-NLP/03_self_attention.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyP5zfFsQPNLySB1wCS34pkZ",
+      "authorship_tag": "ABX9TyPm3laoreXH66KOJZkWaP+F",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -98,12 +98,12 @@
       ],
       "metadata": {
         "id": "wlXOl_Holz6M",
-        "outputId": "6b2ade69-f40c-45f9-cdfd-ad7027fbc370",
+        "outputId": "1e18c5b2-5fb0-4c44-abef-ad9aa775871e",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -133,7 +133,7 @@
       "metadata": {
         "id": "54a8hhq8l2AK"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -144,7 +144,89 @@
       "metadata": {
         "id": "HrCBq56i3sVW"
       },
-      "execution_count": null,
+      "execution_count": 3,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class Attention(nn.Module):\n",
+        "  def __init__(self, hidden_dim, input_dim=None, proj_values=False):\n",
+        "    super().__init__()\n",
+        "\n",
+        "    self.d_k = hidden_dim\n",
+        "    self.input_dim = hidden_dim if input_dim is None else input_dim\n",
+        "    self.proj_values = proj_values\n",
+        "\n",
+        "    # Affine transformations for Q, K, and V\n",
+        "    self.QUERY = nn.Linear(self.input_dim, hidden_dim)\n",
+        "    self.KEY = nn.Linear(self.input_dim, hidden_dim)\n",
+        "    self.VALUE = nn.Linear(self.input_dim, hidden_dim)\n",
+        "\n",
+        "    # a placeholder for the attention scores\n",
+        "    self.alphas = None\n",
+        "\n",
+        "  def init_keys(self, keys):\n",
+        "    self.keys = keys\n",
+        "    self.proj_keys = self.KEY(self.keys)\n",
+        "    self.values = self.VALUE(self.keys) if self.proj_values else self.keys\n",
+        "\n",
+        "  def score_function(self, query):\n",
+        "    proj_query = self.QUERY(query)\n",
+        "    # scaled dot product\n",
+        "    # (N, 1, H) x (N, H, L) -> (N, 1, L)\n",
+        "    dot_products = torch.bmm(proj_query, self.proj_keys.permute(0, 2, 1))\n",
+        "    scores = dot_products / np.sqrt(self.d_k)\n",
+        "    return scores\n",
+        "\n",
+        "  def forward(self, query, mask=None):\n",
+        "    # Step-1: compute alignment scores (scaled dot product)\n",
+        "    scores = self.score_function(query)   # Query is batch-first N, 1, H\n",
+        "    if mask is not None:\n",
+        "      scores = scores.masked_fill(mask==0, -1e-9)\n",
+        "\n",
+        "    # Step-2: compute attention scores (alphas)\n",
+        "    alphas = F.softmax(scores, dim=-1)    # N, 1, L\n",
+        "    self.alphas = alphas.detach()\n",
+        "\n",
+        "    # Step-3: generate the context vector\n",
+        "    context = torch.bmm(alphas, self.values)  # N, 1, L x N, L, H -> N, 1, H\n",
+        "    return context\n",
+        "\n",
+        "\n",
+        "class MultiHeadAttention(nn.Module):\n",
+        "\n",
+        "  def __init__(self, n_heads, d_model, input_dim=None, proj_values=True):\n",
+        "    super().__init__()\n",
+        "\n",
+        "    self.linear = nn.Linear(n_heads * d_model, d_model)\n",
+        "    self.attention_head = nn.ModuleList([Attention(d_model, input_dim=input_dim, proj_values=proj_values) for _ in range(n_heads)])\n",
+        "\n",
+        "  def init_keys(self, key):\n",
+        "    for attention in self.attention_head:\n",
+        "      attention.init_keys(key)\n",
+        "\n",
+        "  @property\n",
+        "  def alphas(self):\n",
+        "    # Shape: n_heads, N, 1, L (source)\n",
+        "    return torch.stack([attention.alphas for attention in self.attention_head], dim=0)\n",
+        "\n",
+        "  def output_function(self, contexts):\n",
+        "    # N, 1, n_heads * D\n",
+        "    concatenated = torch.cat(contexts, axis=-1)\n",
+        "    # Linear transformation to go back to original dimension\n",
+        "    output = self.linear(concatenated)  # N, 1, D\n",
+        "    return output\n",
+        "\n",
+        "  def forward(self, query, mask=None):\n",
+        "    contexts = [attention(query, mask=mask) for attention in self.attention_head]\n",
+        "    output = self.output_function(contexts)\n",
+        "    return output"
+      ],
+      "metadata": {
+        "id": "e1yPmU17vYrs"
+      },
+      "execution_count": 13,
       "outputs": []
     },
     {
@@ -174,13 +256,13 @@
       ],
       "metadata": {
         "id": "tfnZyAI5nVL0",
-        "outputId": "b3b8d5d0-a73c-452d-b335-b3d07b087f9c",
+        "outputId": "95c3f41f-25be-4ffa-b54c-15295381cf59",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 295
+          "height": 0
         }
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "display_data",
@@ -212,13 +294,13 @@
       ],
       "metadata": {
         "id": "ND78M8VHnj7w",
-        "outputId": "58c12d8b-df3d-4394-9486-e0941f3066d3",
+        "outputId": "0a49ec75-0a23-4825-8ee2-3ba87c5dc195",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 295
+          "height": 0
         }
       },
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "display_data",
@@ -263,7 +345,7 @@
       "metadata": {
         "id": "-04BquM1nbe4"
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -282,13 +364,13 @@
       ],
       "metadata": {
         "id": "uLYCNOICACwv",
-        "outputId": "cb91ef5c-0bfd-4db2-d0f0-c4fb05232169",
+        "outputId": "733291a7-9adf-43fe-feef-68e6ac25ca35",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 178
+          "height": 0
         }
       },
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "display_data",
@@ -401,33 +483,40 @@
       "cell_type": "code",
       "source": [
         "class Encoder(nn.Module):\n",
-        "  def __init__(self, n_features, hidden_dim):\n",
+        "  def __init__(self, n_heads, d_model, ff_units, n_features=None):\n",
         "    super().__init__()\n",
         "\n",
-        "    self.hidden_dim = hidden_dim\n",
+        "    self.n_heads = n_heads\n",
+        "    self.d_model = d_model\n",
+        "    self.ff_units = ff_units\n",
         "    self.n_features = n_features\n",
-        "    self.hidden = None\n",
-        "    self.basic_rnn = nn.GRU(self.n_features, self.hidden_dim, batch_first=True)\n",
         "\n",
-        "  def forward(self, X):\n",
-        "    rnn_out, self.hidden = self.basic_rnn(X)\n",
-        "    return rnn_out  # N, L, F"
+        "    self.attention_heads = MultiHeadAttention(n_heads, d_model, input_dim=n_features)\n",
+        "    self.feed_forward_network = nn.Sequential(\n",
+        "        nn.Linear(d_model, ff_units),\n",
+        "        nn.ReLU(),\n",
+        "        nn.Linear(ff_units, d_model)\n",
+        "    )\n",
+        "\n",
+        "  def forward(self, query, mask=None):\n",
+        "    self.attention_heads.init_keys(query)\n",
+        "    attention = self.attention_heads(query, mask)  # context vector\n",
+        "    output = self.feed_forward_network(attention)  # hidden state\n",
+        "    return output"
       ],
       "metadata": {
         "id": "QW0r77mzsKad"
       },
-      "execution_count": null,
+      "execution_count": 16,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "source": [
-        "Don’t we need only the final hidden state?\n",
+        "The mask argument should receive the source mask; that is, the mask we use to\n",
+        "ignore padded data points in our source sequence.\n",
         "\n",
-        "That’s correct. We’ll be using the final hidden state only but in the \"Attention\", we’ll be using all hidden states, and\n",
-        "that’s why we’re implementing the encoder.\n",
-        "\n",
-        "Let’s go over a simple example of encoding: We start with a sequence of coordinates of a \"perfect\" square and split it into source and target sequences:"
+        "Let’s create an encoder and feed it a source sequence:"
       ],
       "metadata": {
         "id": "Jgbo3op7H9gQ"
@@ -446,12 +535,12 @@
       ],
       "metadata": {
         "id": "0TL0qt6iG4j2",
-        "outputId": "f2ebb1c5-9f48-4127-90c6-b788f195b465",
+        "outputId": "3828dafa-4295-4f8c-8c14-60ebfd7ba36f",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -464,7 +553,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 9
+          "execution_count": 10
         }
       ]
     },
@@ -477,7 +566,7 @@
       "metadata": {
         "id": "uazDFnOxHTvq"
       },
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -492,45 +581,40 @@
     {
       "cell_type": "code",
       "source": [
-        "torch.manual_seed(21)\n",
+        "torch.manual_seed(11)\n",
         "\n",
-        "encoder = Encoder(n_features=2, hidden_dim=2)\n",
+        "encoder = Encoder(n_heads=3, d_model=2, ff_units=10, n_features=2)\n",
         "\n",
-        "# output is N, L, F\n",
-        "hidden_seq = encoder(source_seq)\n",
-        "# takes last hidden state\n",
-        "hidden_final = hidden_seq[:, -1:]\n",
-        "hidden_final"
+        "query = source_seq\n",
+        "encoder_states = encoder(query)\n",
+        "encoder_states"
       ],
       "metadata": {
         "id": "-2xSmTDYHlTL",
-        "outputId": "230d8442-b8bd-4a96-f3b7-7df70e0c4e62",
+        "outputId": "c86508d3-7f21-4046-9949-e4a2244db96b",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "tensor([[[ 0.3105, -0.5263]]], grad_fn=<SliceBackward0>)"
+              "tensor([[[-0.0498,  0.2193],\n",
+              "         [-0.0642,  0.2258]]], grad_fn=<ViewBackward0>)"
             ]
           },
           "metadata": {},
-          "execution_count": 11
+          "execution_count": 17
         }
       ]
     },
     {
       "cell_type": "markdown",
       "source": [
-        "Of course, the model is untrained, so the final hidden state above is totally random.\n",
-        "\n",
-        "In a trained model, however, the final hidden state will encode information about\n",
-        "the source sequence.\n",
-        "\n"
+        "It produced a sequence of states that will be the input of the (cross-)attention mechanism used by the decoder."
       ],
       "metadata": {
         "id": "eTA3kmoLIKTr"
@@ -539,7 +623,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "###Decoder"
+        "##Decoder"
       ],
       "metadata": {
         "id": "Ay-WCYjWINMf"
